--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-three/drei": "^9.80.0",
     "@react-three/fiber": "^8.13.6",
     "@react-three/rapier": "^1.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "@types/three": "^0.154.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "three": "^0.154.0"
   },
   "devDependencies": {
