--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "three": "^0.154.0"
+    "three": "^0.154.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@react-three/cannon": "^6.5.2",
